out/production/sci2c-compiler/SciLanguage.g4
grammar SciLanguage;

// ------------ GRAMMAR RULES ------------
prg : 'PROGRAM' IDENT ';' dcllist cabecera sentlist 'END' 'PROGRAM' IDENT subproglist;

dcllist : dcl dcllist | ;
cabecera : 'INTERFACE' cablist 'END' 'INTERFACE' | ;
cablist : decproc decsubprog | decfun decsubprog;
decsubprog : decproc decsubprog | decfun decsubprog | ;
sentlist : sent sentlist2 ;
sentlist2 : sent sentlist2 | ;

dcl : tipo dcl2 ;
dcl2 : defcte | defvar ;
defcte : ',' 'PARAMETER' '::' IDENT '=' simpvalue ctelist ';' ;
ctelist : ',' IDENT '=' simpvalue ctelist | ;
simpvalue : NUM_INT_CONST | NUM_REAL_CONST | STRING_CONST | NUM_INT_CONST_B | NUM_INT_CONST_O | NUM_INT_CONST_H;
defvar : '::' varlist ';' ;
tipo : 'INTEGER' | 'REAL' | 'CHARACTER' charlength ;
charlength : '(' NUM_INT_CONST ')' | ;
varlist : IDENT init varlist2 ;
varlist2 : ',' IDENT init varlist2 | ;
init : '=' simpvalue | ;

decproc : 'SUBROUTINE' IDENT formal_paramlist dec_s_paramlist 'END' 'SUBROUTINE' IDENT;
formal_paramlist : '(' nomparamlist_init ')' | ;
nomparamlist_init : IDENT nomparamlist;
nomparamlist : ',' nomparamlist_init | ;
dec_s_paramlist : tipo ',' 'INTENT' '(' tipoparam ')' IDENT ';' dec_s_paramlist | ;
tipoparam : 'IN' | 'OUT' | 'INOUT';
decfun : 'FUNCTION' IDENT '(' nomparamlist_init ')' tipo '::' IDENT ';' dec_f_paramlist 'END' 'FUNCTION' IDENT;
dec_f_paramlist : tipo ',' 'INTENT' '(' dec_paramlist;
dec_paramlist : 'IN' ')' IDENT ';' dec_f_paramlist | tipoparam ')' IDENT ';'; //LL(2)

sent : IDENT '=' exp ';' | proc_call ';'
    | 'IF' '(' expcond ')' if_then | 'DO' do_body | 'SELECT' 'CASE' '(' exp ')' casos 'END' 'SELECT';
exp : factor exp2 ;
exp2 : op factor exp2 | ;
op : oparit ;
oparit : '+' |'-' | '*' | '/' ;
factor : simpvalue | '(' exp ')' | IDENT factor2 ;
factor2 : '(' exp explist ')' | ;
explist : ',' exp explist | ;
proc_call : 'CALL' IDENT subpparamlist ;
subpparamlist : '(' exp explist ')' | ;

subproglist : codproc subproglist | codfun subproglist | ;
codproc : 'SUBROUTINE' IDENT formal_paramlist dec_s_paramlist dcllist sentlist 'END' 'SUBROUTINE' IDENT ;
codfun : 'FUNCTION' IDENT '(' nomparamlist_init ')' tipo '::' IDENT ';' dec_f_paramlist dcllist sentlist IDENT '=' exp ';' 'END' 'FUNCTION' IDENT ;

// ------------ GRAMMAR RULES: VOLUNTARY PART ------------

expcond : factorcond expcond2 ;

expcond2 : oplog factorcond expcond2 | ;

oplog : '.OR.' | '.AND.' | '.EQV.' | '.NEQV.' ;

factorcond : exp opcomp exp | '(' expcond ')' | '.NOT.' factorcond | '.TRUE.' | '.FALSE.' ;

opcomp : '<' | '>' | '<=' | '>=' | '==' | '/=' ;

if_then : sent | 'THEN' sentlist then_else;

then_else : 'ENDIF' | 'ELSE' sentlist 'ENDIF';

do_body : 'WHILE' '(' expcond ')' sentlist 'ENDDO' | IDENT '=' doval ',' doval ',' doval sentlist 'ENDDO';

doval : NUM_INT_CONST | IDENT;

casos : 'CASE' casos2 | ;

casos2 : '(' etiquetas ')' sentlist casos | 'DEFAULT' sentlist;

etiquetas :  simpvalue etiquetas2 | ':' simpvalue;

etiquetas2 : listaetiqetas | ':' etiquetas3;

etiquetas3 : simpvalue | ;

listaetiqetas : ',' simpvalue listaetiqetas | ;

// ------------ KEYWORDS TOKENS ------------

// ------------ GENERAL TOKENS ------------
IDENT : LETTER IDENT_2 ;
NUM_INT_CONST : SIGN DIGIT DIGIT_2;
NUM_REAL_CONST : SIGN DIGIT DIGIT_2 '.' DIGIT DIGIT_2
               | SIGN DIGIT DIGIT_2 ('e' | 'E') SIGN DIGIT DIGIT_2
               | SIGN DIGIT DIGIT_2 '.' DIGIT DIGIT_2 ('e' | 'E') SIGN DIGIT DIGIT_2
               ;
STRING_CONST : '\'' STRING_SIMPLE '\''
             | '"' STRING_DOUBLE '"'
             ;
COMMENTARY : '!' TEXT (EOL | EOF) -> skip;

TABS : (EOL | '\t' | ' ') -> skip;

NUM_INT_CONST_B : 'b`' SINTAX_B DIGIT_B '`';
NUM_INT_CONST_O : 'o`' SINTAX_O DIGIT_O '`';
NUM_INT_CONST_H : 'z`' SINTAX_H DIGIT_H '`';

// ------------ FRAGMENTS ------------
fragment IDENT_2 : (LETTER | DIGIT | '_') IDENT_2 | ;
fragment DIGIT_2: DIGIT DIGIT_2 | ;
fragment LETTER : [a-zA-Z];
fragment DIGIT : [0-9];
fragment SIGN : '-' | ;
fragment STRING_SIMPLE : (~[\n\r] | '\'\'') STRING_SIMPLE | ;
fragment STRING_DOUBLE : (~[\n\r] | '"''"') STRING_DOUBLE | ;
fragment TEXT : ~[\r\n] TEXT_LAMBDA;
fragment TEXT_LAMBDA : ~[\r\n] | ;
fragment EOL : '\r' '\n' | '\n';

fragment SINTAX_B : [0-1];
fragment SINTAX_O : [0-7];
fragment SINTAX_H : [A-F0-9];
fragment DIGIT_B : SINTAX_B DIGIT_B | ;
fragment DIGIT_O : SINTAX_O DIGIT_O | ;
fragment DIGIT_H : SINTAX_H DIGIT_H | ;
